Reorganised imports, now authorization scopes are in one place to make it work properly